# two-factor

./: .gitignore  2ndfactor.c  CMakeLists.txt  make.sh  run_auth_server.sh  verify.h
auth_server/: app.py  config.py  controller.py  db.py  excepts.py  log.py  mail.py  models.py  utils.py
auth_server/db/: db.sql
auth_server/tpl/: code.html
